2014-05-01  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/stdfn.h (sgn): Fix parenthesization of macro.
	(PATH_MAX): CLang compiler on Cygwin needs a silly little tweak.

	* src/graphics.c (samesign): Improve parenthesization a bit.

2014-05-01  Ethan A Merritt  <merritt@u.washington.edu>

	* demo/gantt.dem demo/html/*:  Add Gantt chart to demo collection.
	Add dashtypes to demo collection.

	* src/show.c:  Show "fixed" property of arrow style.

2014-04-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (f_timecolumn): Replace the old 1-parameter function
	timecolumn(col) with a 2-parameter timecolumn(col,"timeformat"). The
	old version had no way to handle time data that didn't correspond to
	a coordinate on a plot axis in time format (e.g. set xdata time).
	It would segfault if the function appeared in a using spec slot >= 2.
	Now we require an explicit format, so data input is dissociated from
	any particular axis or time setting.
	Bug #1394

	* src/gplt_x11.c term/x11.trm term/xlib.trm:
	Custom dashtype support for X11.

2014-04-28  Dima Kogan  <dima@secretsauce.net>

	* src/mouse.c src/mouse.h src/set.c src/show.c docs/gnuplot.doc:
	Remove the distinction between "coordinate format echoed to the screen
	during mousing" and "coordinate format saved to the clipboard on click".
	This removes the default bindings for hotkeys 3 and 4.

2014-04-28  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc term-ja.diff:  Sync translation to version 1.882
	* docs/gnuplot.doc: typos

2014-04-28  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c src/graph3d.c src/save.c src/show.c: Use named
	values LAYER_{BEHIND|BACK|FRONT} rather than magic numbers.

	* docs/gnuplot.doc: Add a section documenting the use of layers.

2014-04-27  Dima Kogan  <dima@secretsauce.net>

	* src/gplt_x11.c: Fix off-by-one error in selection string.
	Allow clipboard contents to be retrieved more than once.
