@@ -1,24 +1,32 @@
 /* config.h for makefile.cyg
  *
  * Prepared according to config.h from ./configure and by means of
- * config_strip.sh as of gnuplot 4.3 in February 2008.
+ * config_strip.sh as of gnuplot 5.0 in April 2014.
  */
 
-
-/* Define if you want to support files in binary format. */
-#define BINARY_DATA_FILE 1
-
-/* Define if you want to use the CGI terminal under SCO. */
-/* #undef CGI */
+/* Define to allow use of certain deprecated syntax. */
+/* #undef BACKWARDS_COMPATIBLE */
 
 /* Define if you want online help and subtopic tables sorted by column. */
 /* #undef COLUMN_HELP */
+
+/* Provide contact info for gnuplot develoment */
+#define DEVELOPMENT_VERSION 1
+
+/* Define to treat spacebar like any other keystroke. */
+/* #undef DISABLE_SPACE_RAISES_CONSOLE */
+
+/* Contact address for modified and binary distributed gnuplot versions */
+/* #undef DIST_CONTACT */
 
 /* Define if you want to use libgrx20 with MSDOS/djgpp. */
 /* #undef DJSVGA */
 
 /* Define if this system uses a 32-bit DOS extender (djgpp/emx). */
 /* #undef DOS32 */
+
+/* Define to support boxed labels */
+#define EAM_BOXED_TEXT 1
 
 /* Define to allow placement of rectangles and other objects */
 #define EAM_OBJECTS 1
@@ -39,9 +47,6 @@
 /* Define if you want to use a gnuplot history file. */
 #define GNUPLOT_HISTORY 1
 
-/* Define to allow command line macros. EXPERIMENTAL */
-#define GP_MACROS 1
-
 /* Define if you want to use a newer version of libgrx under MSDOS/djgpp. */
 /* #undef GRX21 */
 
@@ -57,6 +62,9 @@
 /* Define to 1 if you have the `bzero' function. */
 /* #undef HAVE_BZERO */
 
+/* libcairo support for eps (cairo >= 1.6) */
+/* #undef HAVE_CAIROEPS */
+
 /* Define if you want the cairo-based terminals. */
 /* #undef HAVE_CAIROPDF */
 
@@ -67,8 +75,17 @@
 /* Define to 1 if you have the <dirent.h> header file. */
 #define HAVE_DIRENT_H 1
 
+/* Define to 1 if you have the <dlfcn.h> header file. */
+/*#undef HAVE_DLFCN_H */
+
+/* Define to 1 if you have the <dl.h> header file. */
+/*#undef HAVE_DL_H */
+
 /* Define to 1 if you have the `doprnt' function. */
 /* #undef HAVE_DOPRNT */
+
+/* Define to 1 if you have the <editline/readline.h> header file. */
+/* #undef HAVE_EDITLINE_READLINE_H */
 
 /* Define to 1 if you have the `erf' function. */
 #define HAVE_ERF 1
@@ -79,11 +96,23 @@
 /* Define to 1 if you have the <errno.h> header file. */
 #define HAVE_ERRNO_H 1
 
+/* Define if external function plugins are to be supported. */
+/* #undef HAVE_EXTERNAL_FUNCTIONS */
+
+/* Define to 1 if you have the `fdopen' function. */
+#define HAVE_FDOPEN 1
+
 /* Define to 1 if you have the <float.h> header file. */
 #define HAVE_FLOAT_H 1
 
 /* Define to 1 if you have the `fork' function. */
 /* #undef HAVE_FORK */
+
+/* Define to 1 if you're using the Aquaterm framework on Mac OS X */
+/* #undef HAVE_FRAMEWORK_AQUATERM */
+
+/* Define to 1 if fseeko (and presumably ftello) exists and is declared. */
+#define HAVE_FSEEKO 1
 
 /* Define to 1 if you have the `gamma' function. */
 /* #undef HAVE_GAMMA */
@@ -117,11 +146,17 @@
 /* Define to 1 if you have the <ggi/xmi.h> header file. */
 /* #undef HAVE_GGI_XMI_H */
 
+/* Define to include support for gpic terminal */
+/* #undef HAVE_GPIC */
+
 /* Define to use gtk/gdk tweaks */
 /* #undef HAVE_GTK */
 
 /* Define to use gtk+ functions to handle cairo */
 /* #undef HAVE_GTK28 */
+
+/* Define if you have libiconv and iconv.h */
+/* #undef HAVE_ICONV */
 
 /* Define to 1 if you have the `index' function. */
 /* #undef HAVE_INDEX */
@@ -129,20 +164,26 @@
 /* Define to 1 if you have the <inttypes.h> header file. */
 #define HAVE_INTTYPES_H 1
 
-/* Define to 1 if you have the `isnan' function. */
-#define HAVE_ISNAN 1
-
-/* Define if you use have kpsexpand (TeX). */
+/* Define if you want to use kpsexpand (TeX). */
 /* #undef HAVE_KPSEXPAND */
+
+/* Define to 1 if you have the <langinfo.h> header file. */
+/* #undef HAVE_LANGINFO_H */
 
 /* Define to 1 if you have the `lgamma' function. */
 /* #undef HAVE_LGAMMA */
 
-/* Define to 1 if you're using the aquaterm library on Mac OS X */
-/* #undef HAVE_LIBAQUATERM */
+/* Define if you have the caca library. */
+/* #undef HAVE_LIBCACA */
+
+/* define if you have libcerf */
+/* #undef HAVE_LIBCERF */
 
 /* Define to 1 if you have the <libc.h> header file. */
 /* #undef HAVE_LIBC_H */
+
+/* Define if you are using the BSD editline library. */
+/* #undef HAVE_LIBEDITLINE */
 
 /* Define if you have gd library. */
 /* #undef HAVE_LIBGD */
@@ -172,6 +213,12 @@
 /* Define to 1 if you have the <locale.h> header file. */
 #define HAVE_LOCALE_H 1
 
+/* Define if you want the lua/TikZ terminal. */
+/* #undef HAVE_LUA */
+
+/* Define to 1 if you have the <lua.h> header file. */
+/* #undef HAVE_LUA_H */
+
 /* Define to 1 if you have the <malloc.h> header file. */
 #define HAVE_MALLOC_H 1
 
@@ -190,8 +237,14 @@
 /* Define to 1 if you have the `memset' function. */
 #define HAVE_MEMSET 1
 
+/* Define to include support for mif terminal */
+/* #undef HAVE_MIF */
+
 /* Define if your pdf library doesn't support dash patterns. */
 /* #undef HAVE_NODASH_LIBPDF */
+
+/* Define to 1 if the system has the type `off_t'. */
+#define HAVE_OFF_T 1
 
 /* Define if your pdf library is too old to support patterns. */
 /* #undef HAVE_OLD_LIBPDF */
@@ -220,8 +273,8 @@
 /* Define to 1 if you have the <readline/readline.h> header file. */
 /* #undef HAVE_READLINE_READLINE_H */
 
-/* Define to 1 if you have the <readline/tilde.h> header file. */
-/* #undef HAVE_READLINE_TILDE_H */
+/* Define if your libreadline has rl_reset_after_signal */
+/* #undef HAVE_READLINE_RESET */
 
 /* Define to 1 if you have the `rindex' function. */
 /* #undef HAVE_RINDEX */
@@ -286,8 +339,14 @@
 /* Define to 1 if you have the `strncasecmp' function. */
 #define HAVE_STRNCASECMP 1
 
+/* Define to 1 if you have the `strndup' function. */
+/* #undef HAVE_STRNDUP */
+
 /* Define to 1 if you have the `strnicmp' function. */
 #define HAVE_STRNICMP 1
+
+/* Define to 1 if you have the `strnlen' function. */
+#define HAVE_STRNLEN 1
 
 /* Define to 1 if you have the `strrchr' function. */
 #define HAVE_STRRCHR 1
@@ -367,6 +426,12 @@
 /* Define to 1 if you have the <vgagl.h> header file. */
 /* #undef HAVE_VGAGL_H */
 
+/* Define to 1 if you have the <wchar.h> header file. */
+#define HAVE_WCHAR_H 1
+
+/* Define to 1 if you have the `wcwidth' function. */
+#define HAVE_WCWIDTH 1
+
 /* Define to 1 if `fork' works. */
 /* #undef HAVE_WORKING_FORK */
 
@@ -388,30 +453,50 @@
 /* Define if this is a Linux system with SuperVGA library. */
 /* #undef LINUXVGA */
 
+/* Define to 1 if malloc(0)==0 */
+/* #undef MALLOC_ZERO_RETURNS_ZERO */
+
+/* Maximum number of parallel axes supported */
+#define MAX_PARALLEL_AXES 7
+
+/* Define if your libreadline has no rl_ding */
+/* #undef MISSING_RL_DING */
+
+/* Define if your libreadline has no rl_force_update_display */
+/* #undef MISSING_RL_FORCED_UPDATE_DISPLAY */
+
+/* Define if your libreadline has no rl_complete_with_tilde_expansion */
+/* #undef MISSING_RL_TILDE_EXPANSION */
+
 /* Define if this is an MSDOS system. */
 /* #undef MSDOS */
 
-/* Define if you want to read .gnuplot from current directory
-   (SECURITY RISK!). */
-/* #undef USE_CWDRC */
+/* Define to disable terminals that depend on code in bitmap.c */
+/* #undef NO_BITMAP_SUPPORT */
+
+/* Define to 1 if your C compiler doesn't accept -c and -o together. */
+/* #undef NO_MINUS_C_MINUS_O */
 
 /* Name of package */
-/* #undef PACKAGE */
+#define PACKAGE "gnuplot"
 
 /* Define to the address where bug reports for this package should be sent. */
-/* #undef PACKAGE_BUGREPORT */
+#define PACKAGE_BUGREPORT ""
 
 /* Define to the full name of this package. */
-/* #undef PACKAGE_NAME */
+#define PACKAGE_NAME "gnuplot"
 
 /* Define to the full name and version of this package. */
-/* #undef PACKAGE_STRING */
+#define PACKAGE_STRING "gnuplot 5.0"
 
 /* Define to the one symbol short name of this package. */
-/* #undef PACKAGE_TARNAME */
+#define PACKAGE_TARNAME "gnuplot"
+
+/* Define to the home page for this package. */
+#define PACKAGE_URL ""
 
 /* Define to the version of this package. */
-/* #undef PACKAGE_VERSION */
+#define PACKAGE_VERSION "5.0"
 
 /* Define if you do have the popen and pclose functions. */
 /* #undef PIPES */
@@ -420,8 +505,11 @@
 /* Unix-type of Interprocess Communication is required for mouse support. */
 /* #undef PIPE_IPC */
 
-/* Define to 1 if the C compiler supports function prototypes. */
+/* Automake 1.12 dropped support for building without prototypes */
 #define PROTOTYPES 1
+
+/* Define if you want the Qt terminal. */
+/* #undef QTTERM */
 
 /* Define if you want to use the included readline function. */
 #define READLINE 1
@@ -447,33 +535,57 @@
 /* Define if you want to use the sunview terminal (sun). */
 /* #undef SUN */
 
-/* Define to use thin plate spines. */
-/* #undef THIN_PLATE_SPLINES_GRID */
-
 /* Define if the 3dkit libray is present. */
 /* #undef THREEDKIT */
+
+/* Define if your libcaca does not have caca_export_canvas_to_memory but the
+   old caca_export_memory */
+/* #undef USE_CACA_EXPORT_MEMORY */
+
+/* Define if you want to read .gnuplot from current directory (SECURITY
+   RISK!). */
+/* #undef USE_CWDRC */
 
 /* Define if you want to use the experimental ggi driver. */
 /* #undef USE_GGI_DRIVER */
 
-/* Define if you want to have mouse support in interactive terminals. */
+/* Define if you have interactive terminals that use mouse support. */
 /* #undef USE_MOUSE */
 /* Don't change it here -- this define is set in config/makefile.cyg. */
 
 /* Define to add support for generating a statistical summary of data */
 #define USE_STATS 1
 
+/* Enable extensions on AIX 3, Interix.  */
+#ifndef _ALL_SOURCE
+# define _ALL_SOURCE 1
+#endif
+/* Enable GNU extensions on systems that have them.  */
+#ifndef _GNU_SOURCE
+# define _GNU_SOURCE 1
+#endif
+/* Enable threading extensions on Solaris.  */
+#ifndef _POSIX_PTHREAD_SEMANTICS
+# define _POSIX_PTHREAD_SEMANTICS 1
+#endif
+/* Enable extensions on HP NonStop.  */
+#ifndef _TANDEM_SOURCE
+# define _TANDEM_SOURCE 1
+#endif
+/* Enable general extensions on Solaris.  */
+#ifndef __EXTENSIONS__
+# define __EXTENSIONS__ 1
+#endif
+
+
 /* Define to enable multi-byte font support for x11 */
 /* #undef USE_X11_MULTIBYTE */
 
 /* Version number of package */
-/* #undef VERSION */
+#define VERSION "5.0"
 
 /* Define if the vgagl libray is present. */
 /* #undef VGAGL */
-
-/* Define to allow zooming or refresh of volatile data. EXPERIMENTAL */
-#define VOLATILE_REFRESH 1
 
 /* Define if you want the wxwidgets terminal. */
 /* #undef WXWIDGETS */
@@ -482,25 +594,45 @@
 /* #undef X11 */
 
 /* Define to 1 if the X Window System is missing or not being used. */
-/* #undef X_DISPLAY_MISSING */
+#define X_DISPLAY_MISSING 1
 
-/* Define like PROTOTYPES; this can be used by system headers. */
-/* #undef __PROTOTYPES */
+/* Enable large inode numbers on Mac OS X 10.5.  */
+#ifndef _DARWIN_USE_64_BIT_INODE
+# define _DARWIN_USE_64_BIT_INODE 1
+#endif
+
+/* Number of bits in a file offset, on hosts where this is settable. */
+/* #undef _FILE_OFFSET_BITS */
+
+/* Define to 1 to make fseeko visible on some hosts (e.g. glibc 2.2). */
+/* #undef _LARGEFILE_SOURCE */
+
+/* Define for large files, on AIX-style hosts. */
+/* #undef _LARGE_FILES */
+
+/* Define to 1 if on MINIX. */
+/* #undef _MINIX */
+
+/* Define to 2 if the system does not provide POSIX.1 features except with
+   this defined. */
+/* #undef _POSIX_1_SOURCE */
+
+/* Define to 1 if you need to in order for `stat' and other things to work. */
+/* #undef _POSIX_SOURCE */
 
 /* Define to empty if `const' does not conform to ANSI C. */
 /* #undef const */
 
-/* libgd versions < 1.8.4 need gdImageStringTTF rather than gdImageStringFT */
-/* #undef gdImageStringFT */
-
 /* Define to `__inline__' or `__inline' if that's what the C compiler
    calls it, or to nothing if 'inline' is not supported under any name.  */
+#ifndef __cplusplus
 /* #undef inline */
+#endif
 
 /* Define to `int' if <sys/types.h> does not define. */
-/* #define pid_t 1 */
+/* #undef pid_t */
 
-/* Define to `unsigned' if <sys/types.h> does not define. */
+/* Define to `unsigned int' if <sys/types.h> does not define. */
 /* #undef size_t */
 
 /* Define as `fork' if `vfork' does not work. */
